# oagdedupe

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  db.db  pyproject.toml  pytest.ini  requirements.txt  run rl.py  run.py  run_staging.py  setup.py  todo.md
.github/workflows/: python-package.yml
.gitlab/issue_templates/: ask.md  communication.md  dataset.md  keyevent.md  workproduct.md
app/: __init__.py  app.py  init.py  utils.py
app/static/css/: base.css  learn.css
app/templates/: base.html  labels.html  learn.html  load.html  nav.html  plots.html  results.html
app/templates/js/: json_fmt.js  labels_json.js  learn_json.js  load_json.js
app/views/: active_learn.py  download.py  labels.py  learn.py  load_page.py  plots.py
book/: README.md  _config.yml  _toc.yml
book/contents/: blocking.md  home.md  notes_terms.md
book/contents/demo/: quickstart.py  quickstart_rl.py
book/contents/structure/: notes.md
dedupe/: README.md  __init__.py  api.py  base.py  config.py  db.py  mixin.py  settings.py  utils.py
dedupe/api/: main.py  utils.py
dedupe/app/: init.py  utils.py
dedupe/block/: __init__.py  algos.py  blocker.py  blockers.py  groups.py  learner.py  schemes.py
dedupe/cluster/: cluster.py
dedupe/datasets/: fake.py
dedupe/db/: __init__.py  database.py  engine.py  initialize.py  query.py  tables.py
dedupe/db/orm/: base.py  tables.py
dedupe/distance/: string.py
dedupe/fastapi/: __init__.py  db.py  fapi.py  main.py  utils.py
dedupe/labelstudio/: api.py  lsapi.py
dedupe/postgres/: docker-compose.yml  funcs.py  functions.sql  postgres.py  postgres.sh
dedupe/train/: active.py  app_active.py  models.py  threshold.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  confs.py  examples.rst  index.rst  overview.md  usage.rst
docs/source/api/: database.rst  main.rst
docs/source/dedupe/: api.rst  blocker.rst  cluster.rst  database.rst  distance.rst  (+2 more)
fact_check/: README.md
methodology/: README.md
notebooks/: README.md
oagdedupe/: __init__.py  _typing.py  api.py  base.py  base_old.py  containers.py  mixin.py  model.py  settings.py  typing.py  util.py  utils.py
oagdedupe/block/: __init__.py  algos.py  base.py  blocker.py  blockers.py  blocking.py  forward.py  groups.py  learner.py  map.py  mixin.py  optimizers.py  pairs.py  schemes.py  sql.py
oagdedupe/blocking/: blockmethod.py  intersection.py  union.py
oagdedupe/cluster/: cluster.py
oagdedupe/datasets/: fake.py
oagdedupe/db/: __init__.py  base.py  database.py  initialize.py  orm.py  tables.py
oagdedupe/distance/: string.py
oagdedupe/fastapi/: fapi.py  main.py
oagdedupe/labelstudio/: lsapi.py
oagdedupe/models/: ManualBlock.py
oagdedupe/naiveblocking/: naiveblocking.py
oagdedupe/postgres/: Dockerfile  docker-compose.yml  funcs.py  init-database.sh  postgres.sh
oagdedupe/simple/: api.py  concepts.py  deduper.py  fakes.py  repositories.py  schemes.py  signatures.py  subroutines.py  utils.py
oagdedupe/simplepandas/: concepts.py  deduper.py  fakes.py  learner.py  repositories.py  schemes.py  subroutines.py
oagdedupe/train/: models.py  threshold.py
references/: README.md  Untitled Diagram.drawio  communications.md  compositions.puml  configuration.md  data.md  dependencies.md  full.puml  keyevents.md  settings.md  work_product.md
references/diagram/: modelDiagram.py
reports/: README.md
scripts/: run.py
scripts/diagram/: modelDiagram.py  readme.md
tests/: conftest.py  eval_blocker.py  pipeline_test.py  readme.py  test_blockers.py  test_pipeline.py  test_ray.py  test_settings.py
tests/benchmarks/: nc_voters.py
tests/block/: test_block_learner.py  test_learner.py  test_mixin.py  test_optimizers.py  test_pairs.py  test_sql.py
tests/db/: test_connection.py  test_initialize.py  test_label_distances.py  test_orm.py  test_orm_clusters.py
tests/simple/: test_simple_concepts.py  test_simple_deduper.py  test_simple_schemes.py  test_simple_subroutines.py
tests/simplepandas/: test_simplepandas_concepts.py  test_simplepandas_deduper.py  test_simplepandas_schemes.py  test_simplepandas_subroutines.py
tests/speed/: log_speed.py
tests_old/: conftest.py  test.csv
tests_old/block/: test_learner.py
(+48 files in other folders)
