[tool.poetry]
name = "dedupe"
version = "0.1.0"
description = ""
authors = ["Chansoo Song"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.4.2"
networkx = "^2.8"
numpy = "^1.22.1"
jellyfish = "^0.9.0"
scikit-learn = "^1.0.2"
tqdm = "^4.58.0"
pytest = "^7.1.2"
ipykernel = "^6.13.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
flake8 = "^4.0.1"
ray = "^1.13.0"
modAL = "^0.4.1"
streamlit = "^1.11.1"
streamlit-aggrid = "^0.2.3"
fastapi = {extras = ["all"], version = "^0.79.0"}
SQLAlchemy = "^1.4.39"
diagrams = "^0.21.1"
Faker = "^13.15.1"
jupyter-book = {version = "^0.13.0", optional = true}
jupytext = {version = "^1.14.1", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
book=["jupyter-book", "jupytext"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
